package rec.gui;

message PointP {
  optional int32 x = 1;
  optional int32 y = 2;
};

message Rectangle {
  optional PointP top_left = 1;
  optional PointP dimensions = 2;
};

message Layer {
  optional Rectangle bounds = 1;
  optional int32 layer = 2;
  // Layer 0 is the top layer, layer 1 below that...
  // Perhaps layer -1 is the bottom layer?
};
